--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -6,6 +6,6 @@
     <h1> Mon super site de gossip, depuis le dossier views ! </h1>
     <p>Bienvenue, cher utilisateur. La liste des Gossips arrive bientôt. Stay tuned!</p>
     <p>En attendant, tu peux cliquer ci-dessous pour créer ton potin.</p>
-    <a href="/gossips/new/"> Poster un potin en cliquant ici.</a>
+    <a href="/gossips/new"> Poster un potin en cliquant ici.</a>
   </body>
 </html>
