--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -3,9 +3,9 @@
     <title> The Gossip Project </title>
   </head>
   <body>
-    <h1> Mon super site de gossip, depuis le dossier views ! </h1>
+    <h1> Mon super site de gossip ! </h1>
     <p>Bienvenue, cher utilisateur. La liste des Gossips arrive bientôt. Stay tuned!</p>
     <p>En attendant, tu peux cliquer ci-dessous pour créer ton potin.</p>
-    <a href="/gossips/new"> Poster un potin en cliquant ici.</a>
-  </body>
+    <a href="/gossips/new"> Clique ici pour poster un potin.</a>
+    <a href="/gossips/all"> Clique ici pour voir tous les potins.</a>
 </html>
