changed bg color

--- a/lib/views/all_gossips.erb
+++ b/lib/views/all_gossips.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Tous les potins</title>
 </head>
-<body>
+<body style="background-color: rgb(173, 216, 230);">
 <h1>Voici tous les gossips :</h1>
 <% gossips.each_with_index do |gossip, index| %>
     <p>
