--- a/lib/views/edit.erb
+++ b/lib/views/edit.erb
@@ -2,7 +2,7 @@
   <head>
     <title>Modifie un potin</title>
   </head>
-  <body>
+  <body style="background-color: rgb(173, 216, 230);">
     <h1>Modifie un potin !</h1>
     <p>Balance ta modification via le formulaire ci-dessous</p>
     <form action='/gossips/:id/edit' method='POST'>
