--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -2,9 +2,9 @@
   <head>
     <title> The Gossip Project </title>
   </head>
-  <body>
-    <h1> Mon super site de gossip ! </h1>
-    <p>Bienvenue, cher utilisateur. La liste des Gossips arrive bientôt. Stay tuned!</p>
+  <body style="background-color: rgb(173, 216, 230);">    
+  <h1> Le super site de gossip qui boite ! </h1>
+    <p>Bienvenue, cher utilisateur. La liste des Gossips est maintenant disponible. Les commentaires arrivent bientôt. Stay tuned!</p>
     <p>En attendant, tu peux cliquer ci-dessous pour créer ton potin.</p>
     <a href="/gossips/new"> Clique ici pour poster un potin.</a>
     <a href="/gossips/all"> Clique ici pour voir tous les potins.</a>
