--- a/lib/views/new_gossip.erb
+++ b/lib/views/new_gossip.erb
@@ -2,7 +2,7 @@
   <head>
     <title>Créer un potin</title>
   </head>
-  <body>
+  <body style="background-color: rgb(173, 216, 230);">
     <h1>Crée un potin !</h1>
     <p>Balance ton potin via le formulaire ci-dessous</p>
     <form action='/gossips/new' method='POST'>
